--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
   <title>Hero Banner</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="banner">
-  <img class="img-ph img-flex" src="images/placeholder-16by9.svg" alt="hero">
-  <div class="content">
-    <div class="img-hero">
-      <img class="img img-flex" src="images/mecha.svg" alt="hero">
-    </div>
-    <div class="text">
-      <h2>Ultra Super Fighting Force</h2>
-      <p>Control gaint, fighting, transforming robots and save the world!</p>
-      <a href="#">Join USFF</a>
+  <div class="banner">
+    <img class="img-ph img-flex" src="images/placeholder-16by9.svg" alt="hero">
+    <div class="content">
+      <div class="img-hero">
+        <img class="img img-flex" src="images/mecha.svg" alt="hero">
+      </div>
+      <div class="text">
+        <h2>Ultra Super Fighting Force</h2>
+        <p>Control giant, fighting, transforming robots and save the world!</p>
+        <a class="btn btn-big" href="#">Join USFF</a>
+      </div>
     </div>
   </div>
-</div>
 </body>
 </html>
