--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="banner">
-    <img class="img-ph img-flex" src="images/placeholder-16by9.svg" alt="hero">
+    <img class="img-flex" src="images/placeholder-16by9.svg" alt="hero">
     <div class="content">
       <div class="img-hero">
         <img class="img img-flex" src="images/mecha.svg" alt="hero">
