--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img class="img-flex" src="images/placeholder-16by9.svg" alt="hero">
     <div class="content">
       <div class="img-hero">
-        <img class="img img-flex" src="images/mecha.svg" alt="hero">
+        <img class="img-flex" src="images/mecha.svg" alt="hero">
       </div>
       <div class="text">
         <h2>Ultra Super Fighting Force</h2>
