--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
   <div class="banner">
-    <img class="img-flex" src="images/placeholder-16by9.svg" alt="hero">
+    <img class="img-flex" src="images/placeholder-16by9.svg" alt="banner">
     <div class="content">
-      <div class="img-hero">
-        <img class="img-flex" src="images/mecha.svg" alt="hero">
+      <div class="img-div">
+        <img class="hero img-flex" src="images/mecha.svg" alt="hero">
       </div>
-      <div class="text">
+      <div class="text-div text">
         <h2>Ultra Super Fighting Force</h2>
         <p>Control giant, fighting, transforming robots and save the world!</p>
         <a class="btn btn-big" href="#">Join USFF</a>
